[tool.poetry]
name = "arcaflow-plugin-sysbench"
version = "0.1.0"
description = "arcaflow plugin for sysbench"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"
packages = [{include = "sysbench_plugin.py", from="."}]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
