[tool.poetry]
name = "arcaflow-plugin-sysbench"
version = "0.1.0"
description = "arcaflow plugin for sysbench"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"
packages = [{include = "sysbench_plugin.py", from="./arcaflow_plugin_sysbench"}]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.13.0"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^2.0.0"
pydocstyle = "^6.1.1"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
