[tool.poetry]
name = "arcaflow-plugin-sysbench"
version = "0.1.0"
description = "arcaflow plugin for sysbench"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"
packages = [{include = "sysbench_plugin.py", from="./arcaflow_plugin_sysbench"}]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.14.0"

[tool.poetry.dev-dependencies]
docformatter = "1.7.5"
autoflake = "2.3.1"
pydocstyle = "6.3.0"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
